Refactoring: fix issues with cover image, content  and image alignment
UPDATED:
Some div ids to classes for DRY.
The global "img" css rule to "img_content" to target only the images in content excluding the cover image.
"Directions" from paragraphs to an ordered list.

REMOVED:
center alignment of content

--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -38,31 +38,32 @@ h3 {
 }
 #showcase {
   background-image: url("../images/apple-pie.jpg");
+  background-size: cover;
   height: 20em;
 }
 
 #content {
-  margin: 2em auto;
-  max-width: 30em;
+  margin: 2em 10em;
 }
 
 #intro_text {
   color: white;
   font-size: 2em;
-  font-weight: bold;
   padding: 5em 0em 1em 0em;
   text-align: center;
 }
 
-#ingredients {
+.recipe {
   margin-top: 2em;
 }
 
-#directions {
-  margin-top: 2em;
+.img_content {
+  max-height: 4em;
+  display: block;
+  margin: 2em auto;
 }
 
-img {
-  width: 300px;
-  max-height: 100px;
+ol,
+ul {
+  margin-left: 3em;
 }
